name:          tasty-hedgehog-lens
version:       0.1
synopsis:      Test lens properties with tasty and hedgehog
homepage:      https://github.com/serokell/tasty-hedgehog-lens/
bug-reports:   https://github.com/serokell/tasty-hedgehog-lens/issues
license:       MPL-2.0
license-file:  LICENSE
author:        Serokell
maintainer:    hi@serokell.io
copyright:     © 2017 Serokell
category:      Testing, Lenses
build-type:    Simple
cabal-version: >= 1.10

extra-source-files:
  README.md


source-repository head
  type: git
  location: git://github.com/serokell/tasty-hedgehog-lens.git

library
  hs-source-dirs:       src
  exposed-modules:      Hedgehog.Lens.Iso
                        Hedgehog.Lens.Lens
                        Hedgehog.Lens.Prism
                        Hedgehog.Lens.Setter
                        Hedgehog.Lens.Traversal
  build-depends :       base         >= 4.6 && < 5
                      , hedgehog     >= 0.2 && < 1
                      , lens         >= 4   && < 5
  default-language:     Haskell2010
  ghc-options:          -Wall
